# anki-deck-builder

./: .gitignore  README.md  build_deck.py  pyproject.toml
anki_deck_builder/: __init__.py  app.py  cli.py  config.py
anki_deck_builder/audio/: cache.py  polly.py  service.py
anki_deck_builder/core/: __init__.py  deck_types.py  frequency.py  levels.py  models.py  planning.py  prepare.py  schemas.py  tags.py
anki_deck_builder/deck_types/: __init__.py  base.py  french_call_response.py  french_ipa_audio.py
anki_deck_builder/domain/: ids.py  models.py
anki_deck_builder/exports/: anki_csv.py  apkg.py  reports.py
anki_deck_builder/io/: csv_reader.py  csv_writer.py  manifest.py  media.py
anki_deck_builder/processing/: frequency.py  levels.py  prepare.py
anki_deck_builder/schemas/: __init__.py  base.py  french_call_response.py  french_sentences.py
anki_deck_builder/shell/: __init__.py  anki_csv_io.py  apkg_io.py  audio_io.py  csv_io.py  manifest_io.py  media_io.py  report_io.py
