[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-deck-builder"
version = "0.1.0"
description = "Functional-core, imperative-shell Anki deck builder"
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "genanki",
  "tqdm",
  "wordfreq",
]

[project.scripts]
anki-build = "anki_deck_builder.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["anki_deck_builder*"]
